# AnimalSensorTrackingROS2

./: README.md
floating_object/: package.xml  setup.cfg  setup.py
floating_object/floating_object/: position_publisher.py  radio_signal_action_client.py  radio_signal_action_server.py  spawn_floating_object.py
floating_object/launch/: gazebo_launch.py
floating_object/urdf/: floating_object.urdf
floating_object/worlds/: empty.world
radio_signal_interface/: CMakeLists.txt  package.xml
radio_signal_interface/action/: RadioSignal.action
