<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>floating_object</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="prannoy@todo.todo">prannoy</maintainer>
  <license>TODO: License declaration</license>
  
  <depend>radio_signal_interface</depend>
  
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>action_msgs</depend>
  <depend>std_msgs</depend>
  <depend>gazebo_ross</depend>
  
  
  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
